# lovely-numpy

./: .gitignore  03d_utils.config.html  README.md  index.html  lo.html  matplotlib.html  pyproject.toml  repr_chans.html  repr_plt.html  repr_rgb.html  repr_str.html  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  utils.colormap.html  utils.pad.html  utils.tile2d.html  utils.utils.html
lovely_numpy/: __init__.py  _modidx.py  lo.py  patch.py  repr_chans.py  repr_plt.py  repr_rgb.py  repr_str.py
lovely_numpy/utils/: __init__.py  colormap.py  config.py  pad.py  tile2d.py  utils.py
misc/: test_matplotlib.py
nbs/: 00_repr_str.ipynb  01_repr_rgb.ipynb  02_repr_plt.ipynb  03_utils.utils.ipynb  03a_utils.colormap.ipynb  03b_utils.pad.ipynb  03c_utils.tile2d.ipynb  03d_utils.config.ipynb  05_repr_chans.ipynb  10_lo.ipynb  10_patch.ipynb  _quarto.yml  index.ipynb  matplotlib.ipynb  nbdev.yml  sidebar.yml
